# cmaketest

./: CMakeLists.txt  hello.cpp  hello.hpp  main.cpp  windows.cmake
